--- a/aoot/pyproject.toml
+++ b/aoot/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.12"
 mypy = "^1.15.0"
 sqlalchemy = "^2.0.40"
+dishka = "^1.5.3"
+python-dotenv = "^1.1.0"
 
 
 [build-system]
