--- a/aoot/pyproject.toml
+++ b/aoot/pyproject.toml
@@ -13,6 +13,8 @@ dishka = "^1.5.3"
 python-dotenv = "^1.1.0"
 pytest = "^8.3.5"
 colorlog = "^6.9.0"
+pytest-asyncio = "^0.26.0"
+asyncpg = "^0.30.0"
 
 
 [build-system]
