add base http client

--- a/aoot/pyproject.toml
+++ b/aoot/pyproject.toml
@@ -17,6 +17,7 @@ colorlog = "^6.9.0"
 pytest-asyncio = "^0.26.0"
 asyncpg = "^0.30.0"
 alembic = "^1.15.2"
+aiohttp = "^3.11.16"
 
 
 [build-system]
