--- a/aoot/example.env
+++ b/aoot/example.env
@@ -1,5 +1,5 @@
 DB_USER=default_postgres_user
 DB_PASSWORD=default_postgres_password
-DB_HOST=postgres
+DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=default_posgtres_db
+DB_NAME=default_postgres_db
